<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgimain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bmi_bg"
    tools:context=".bgi">

    <FrameLayout
        android:id="@+id/videoFrame"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:background="@drawable/round_video_bg"
        android:elevation="4dp">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editWeight"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:background="@drawable/cyan_border_bg"
            android:hint="@string/hint_WT"
            android:inputType="number" />

        <EditText
            android:id="@+id/editHeightFt"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:background="@drawable/cyan_border_bg"
            android:hint="@string/hint_htF"
            android:inputType="number" />

        <EditText
            android:id="@+id/editHeightIn"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/cyan_border_bg"
            android:ems="10"
            android:hint="@string/hint_htI"
            android:inputType="number" />

        <Button
            android:id="@+id/btnCalculate"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/CALCULATE_BMI" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textColor="@color/black"
            android:text="@string/Result"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>